# QtMCL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assests.qrc
src/: config.cpp  config.h  main.cpp  version.cpp.in  version.h  version.h.in
src/game/: download.cpp  download.h  game.cpp  game.h  launcher.cpp  launcher.h
src/natives/Linux/: memory_info.cpp
src/natives/Windows/: check_network_storage.cpp  info.rc.in  memory_info.cpp
src/ui/: ContentArea.qml  FuncBar.qml  Main.qml  NavBar.qml
src/ui/ContentAreaPages/LaunchPages/: PageGameSettings.qml  PageLaunch.qml  PageMods.qml
src/ui/ContentAreaPages/SettingsPages/: PageGameSettings.qml
src/ui/NavBarButtonGroups/: ButtonGroupAbout.qml  ButtonGroupDownload.qml  ButtonGroupLaunch.qml  ButtonGroupSettings.qml
src/ui/QuickMCLComponents/: QuickMCLButton.qml  QuickMCLComboBox.qml
src/utils/: java.cpp  java.h  json_parser.cpp  json_parser.h  qml_interface.cpp  qml_interface.h  urls.cpp  urls.h  utils.cpp  utils.h
